# paulsha-conventions

./: .gitignore  .paul-project.yml  AGENTS.md  CHANGELOG.md  CLAUDE.md  GEMINI.md  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/actions/policy-check/: action.yml  run.sh
.github/workflows/: policy-check.yml  reusable-policy-check.yml  self-test.yml
docs/superpowers/plans/: 2026-04-23-rollout-github-defaults-and-new-project-template.md  (+1 more)
policy_check/: __main__.py  cli.py  config.py  pr_context.py  report.py
policy_check/rules/: __init__.py  base.py  r01_readme_exists.py  r02_readme_sections.py  r03_changelog_exists.py  r04_changelog_format.py  r05_version_exists.py  r06_version_format.py  r07_version_tag_sync.py  r08_policy_config_schema.py  r09_code_changelog_sync.py  r10_pr_title.py  r11_pr_body_checklist.py  r12_branch_source.py  r13_agent_files_exist.py  r14_agent_files_version.py  r15_workflow_pinning.py  r16_cli_help_sync.py  registry.py
scripts/: apply-branch-protection.sh  update-cli-help.sh  worktree-cleanup.sh
tests/: conftest.py  test_action_integration.py  test_rule_r02_readme_sections.py  test_rule_r04_changelog_format.py  test_rule_r06_version_format.py  test_rule_r07_version_tag_sync.py  test_rule_r08_policy_config_schema.py  test_rule_r09_code_changelog_sync.py  test_rule_r10_r11_r12_pr_properties.py  test_rule_r13_r14_agent_files.py  test_rule_r15_workflow_pinning.py  test_rule_r16_cli_help_sync.py  test_rules_presence.py  test_self_dogfood_r16.py  test_update_cli_help_script.py  test_workflow_action_interface.py
(+50 files in other folders)
